--- a/sections/Intro.mdx
+++ b/sections/Intro.mdx
@@ -1,6 +1,15 @@
-## One of the premiere rugby clubs in the Mid Atlantic. Competing in Division I and Division III men's rugby
+import Image from 'next/image';
+import Link from 'next/link'
+import SlugfestBanner from '../assets/slugfest.jpg'
 
+<Link href="/slugfest">
+  <Image style={{maxWidth: '400px', height: 'auto'}} src={SlugfestBanner} alt="Slugfest 10s"/>
+</Link>
+
+## 2023 Mid Atlantic Champions
 ## 2012 and 2014 Division II National Champions
+
+We are one of the premiere rugby clubs in the Mid Atlantic. Competing in Division I and Division III men's rugby.
 
 <a
   href="https://discord.gg/B563CpDdgn"
@@ -8,6 +17,17 @@
   rel="noopener noreferrer"
 >Join Discord</a> to stay engaged and get immediate notifications on your phone for important announcements.
 
-New Players: Join Our Mailing List for team announcements, practice times, and player information.
+<a 
+  href="https://groups.google.com/forum/#!forum/rocky-gorge"
+  target="_blank"
+  rel="noopener noreferer"
+>New Players: Join Our Mailing List</a> for team announcements, 
+practice times, and player information.
 
-Join our alumni list for social announcements, fan information, and old boy happy hours.
+<a 
+  href="https://groups.google.com/forum/#!forum/rocky-gorge-alumni" 
+  target="_blank"
+  rel="noopener noreferer"
+>Join our alumni list</a> for social announcements, fan 
+information, and old boy happy hours.
+
