--- a/pages/slugfest.mdx
+++ b/pages/slugfest.mdx
@@ -5,7 +5,7 @@ import SlugfestBanner from '../assets/slugfest.jpg'
 // import Concessions from "../components/Concessions";
 
 export const OPTIONS = [
-  { name: `One Side - $350`, value: 350 },
+  { name: `Senior Club Side - $350`, value: 350 },
   { name: "U19 Side - $200", value: 200 }
 ];
 
@@ -35,7 +35,7 @@ June 10 - 9:00AM-3:00PM<br />
 Social to follow at Oliver's Old Town Tavern
 
 ### Cost
-$300 for senior sides; $500 for two sides.<br/>
+$350 for senior sides<br/>
 $200 for U19 sides.
 </Col>
 </Row>
