--- a/pages/slugfest.mdx
+++ b/pages/slugfest.mdx
@@ -36,7 +36,7 @@ Social to follow at Oliver's Old Town Tavern
 
 ### Cost
 $350 for senior sides<br/>
-$200 for U19 sides.
+$200 for U19 Sevens sides.
 </Col>
 </Row>
 <Row>
