--- a/pages/slugfest.mdx
+++ b/pages/slugfest.mdx
@@ -5,8 +5,7 @@ import SlugfestBanner from '../assets/slugfest.jpg'
 // import Concessions from "../components/Concessions";
 
 export const OPTIONS = [
-  { name: `Senior Club Side - $350`, value: 350 },
-  { name: "U19 Side - $200", value: 200 }
+  { name: "U19 Sevens Side - $200", value: 200 }
 ];
 
 <Row gutter={20} type="flex">
@@ -32,10 +31,8 @@ East Columbia Library Park<br />
 
 ### When
 June 10 - 9:00AM-3:00PM<br />
-Social to follow at Oliver's Old Town Tavern
 
 ### Cost
-$350 for senior sides<br/>
 $200 for U19 Sevens sides.
 </Col>
 </Row>
@@ -43,6 +40,6 @@ $200 for U19 Sevens sides.
 <Col>
 ### Register your team
 Contact [slugfest@rockygorgerugby.com](mailto:slugfest@rockygorgerugby.com) to register your team.
-<PaypalProduct options={OPTIONS} defaultAmount={300}/>
+<PaypalProduct options={OPTIONS} defaultAmount={200}/>
 </Col>
 </Row>
