--- a/pages/slugfest.mdx
+++ b/pages/slugfest.mdx
@@ -2,7 +2,7 @@ import Image from 'next/image';
 import {Row, Col} from 'antd'
 import PaypalProduct from "../components/PaypalProduct";
 import SlugfestBanner from '../assets/slugfest.jpg'
-// import Concessions from "../components/Concessions";
+import Concessions from "../components/Concessions";
 
 export const OPTIONS = [
   { name: "U19 Sevens Side - $200", value: 200 }
@@ -16,14 +16,13 @@ export const OPTIONS = [
 <Col md={11}>
 ### <a href="https://slugfest.netlify.app" target="_blank">Scores and Schedule</a>
 
-{/* 
+
 ### Concessions
 * BBQ Chicken Sandwich: $5
 * Pulled Pork Sandwich: $5
 * Bottled Water: $1
 
 <Concessions/>
-*/}
 
 ### Where
 East Columbia Library Park<br />
