--- a/sections/Intro.mdx
+++ b/sections/Intro.mdx
@@ -1,9 +1,9 @@
 import Image from 'next/image';
 import Link from 'next/link'
-import SlugfestBanner from '../assets/slugfest.jpg'
+import BanquetBanner from '../assets/bbq.png'
 
-<Link href="/slugfest">
-  <Image style={{maxWidth: '400px', height: 'auto'}} src={SlugfestBanner} alt="Slugfest 10s"/>
+<Link href="/banquet">
+  <Image style={{maxWidth: '400px', height: 'auto'}} src={BanquetBanner} alt="Summer Banquet"/>
 </Link>
 
 ## 2023 Mid Atlantic Champions
