--- a/sections/ProductLinks.mdx
+++ b/sections/ProductLinks.mdx
@@ -3,12 +3,12 @@ import CardLink from '../components/CardLink'
 
 <Row type="flex">
   <CardLink title="Player Dues" link="/dues">
-    Spring Season: $200
+    Fall Season: $200
     $25 off for new players
   </CardLink>
-  <CardLink title="Slugfest 10s" link="/slugfest">
-    June 10<br/>
-    Enter a team today
+  <CardLink title="Summer Barbeque" link="/banquet">
+    July 9<br/>
+    Buy your tickets now.
   </CardLink>
   <CardLink title="Advertise with Us" link="/sponsors">
     Become a jersey sponsor.
