--- a/pages/banquet.mdx
+++ b/pages/banquet.mdx
@@ -1,7 +1,7 @@
 import PaypalProduct from "../components/PaypalProduct";
 import Image from 'next/image';
-import Map from '../assets/apl map.png'
-import Champs from '../assets/champions.PNG'
+import Map from '../assets/apl.png'
+import Champs from '../assets/champions.png'
 import BanquetTickets from '../components/BanquetTickets'
 
 
