Update store data

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,12 +4,12 @@ import Calendar from "../components/Calendar";
 import Product from "../components/Product";
 import CardLink from "../components/CardLink";
 
-import Intro from '../sections/Intro.mdx'
-import ProductLinks from '../sections/ProductLinks.mdx'
+import Intro from "../sections/Intro.mdx";
+import ProductLinks from "../sections/ProductLinks";
 
 <Row>
   <Col md={22} lg={22} style={{ textAlign: "center" }}>
-    <Intro/>
+    <Intro />
   </Col>
 </Row>
 <Row gutter={20} type="flex">
