--- a/sections/Intro.mdx
+++ b/sections/Intro.mdx
@@ -1,12 +1,8 @@
-import Image from 'next/image';
-import Link from 'next/link'
-import BanquetBanner from '../assets/bbq.png'
-
-<Link href="/banquet">
-  <Image style={{maxWidth: '400px', height: 'auto'}} src={BanquetBanner} alt="Summer Banquet"/>
-</Link>
+import Image from "next/image";
+import Link from "next/link";
 
 ## 2023 Mid Atlantic Champions
+
 ## 2012 and 2014 Division II National Champions
 
 We are one of the premiere rugby clubs in the Mid Atlantic. Competing in Division I and Division III men's rugby.
@@ -15,19 +11,17 @@ We are one of the premiere rugby clubs in the Mid Atlantic. Competing in Divisio
   href="https://discord.gg/B563CpDdgn"
   target="_blank"
   rel="noopener noreferrer"
->Join Discord</a> to stay engaged and get immediate notifications on your phone for important announcements.
+>Join Discord</a> to stay engaged and get immediate notifications on your phone for important
+announcements.
 
-<a 
+<a
   href="https://groups.google.com/forum/#!forum/rocky-gorge"
   target="_blank"
   rel="noopener noreferer"
->New Players: Join Our Mailing List</a> for team announcements, 
-practice times, and player information.
+>New Players: Join Our Mailing List</a> for team announcements, practice times, and player information.
 
-<a 
-  href="https://groups.google.com/forum/#!forum/rocky-gorge-alumni" 
+<a
+  href="https://groups.google.com/forum/#!forum/rocky-gorge-alumni"
   target="_blank"
   rel="noopener noreferer"
->Join our alumni list</a> for social announcements, fan 
-information, and old boy happy hours.
-
+>Join our alumni list</a> for social announcements, fan information, and old boy happy hours.
