--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,6 +15,11 @@ import ProductLinks from "../sections/ProductLinks";
 <Row gutter={20} type="flex">
   <Col md={22} lg={11}>
     <ProductLinks />
+    <Row>
+      <CardLink title="Jersey Report" link={`/jerseyReport`}>
+        Captains please fill this out after games.
+      </CardLink>
+    </Row>
   </Col>
   <Col md={22} lg={11}>
     <Link href="/calendar">
