--- a/pages/banquet.mdx
+++ b/pages/banquet.mdx
@@ -2,11 +2,7 @@ import PaypalProduct from "../components/PaypalProduct";
 import Image from 'next/image';
 import Map from '../assets/apl.png'
 import Champs from '../assets/champions.png'
-import BanquetTickets from '../components/BanquetTickets'
-
-
-export const TICKET = 30;
-export const KIDS = 10
+import BanquetTickets, {TICKET} from '../components/BanquetTickets'
 
 export const OPTIONS = [
   { name: `2 Tickets - $${TICKET * 2}`, value: TICKET * 2 },
@@ -18,20 +14,10 @@ export const OPTIONS = [
 
 <BanquetTickets defaultAmount={TICKET * 2} options={OPTIONS} description="Banquet Tickets">
 
-<Image style={{maxHeight: '300px', width: 'auto'}} src={Champs} alt="MAC Champions"/>
+## Join us for our 2024 Rocky Gorge Hall of Fame Banquet
 
-## Join us in celebrating the 2023 MAC Championship
+### When: June 29
 
-### When: July 9, 2pm-8pm
-
-### Where: 
-
-APL Pavilion<br/>
-11100 John Hopkins Road<br/>
-Laurel, MD 20723
-
-## RSVP and sign up for updates on [Evite](http://evite.me/Eyf4nd9YXa)
+### More details to come
 
 </BanquetTickets>
-
-<Image src={Map} style={{maxHeight: "300px", width: "auto"}}/>
