--- a/pages/banquet.mdx
+++ b/pages/banquet.mdx
@@ -12,12 +12,15 @@ export const OPTIONS = [
   }
 ];
 
-<BanquetTickets defaultAmount={TICKET * 2} options={OPTIONS} description="Banquet Tickets">
+<BanquetTickets defaultAmount={TICKET} options={OPTIONS} description="Banquet Tickets">
 
 ## Join us for our 2024 Rocky Gorge Hall of Fame Banquet
 
 ### When: June 29
 
-### More details to come
+### Where: The Meeting House, 5885 Robert Oliver Place, Columbia , MD 21075
 
+More details to come
+
+[RSVP on Evite](http://evite.me/6AjARuyyWm)
 </BanquetTickets>
