--- a/sections/Intro.mdx
+++ b/sections/Intro.mdx
@@ -7,18 +7,7 @@ import Link from "next/link";
 
 We are one of the premiere rugby clubs in the Mid Atlantic. Competing in Division I and Division III men's rugby.
 
-<a
-  href="https://discord.gg/B563CpDdgn"
-  target="_blank"
-  rel="noopener noreferrer"
->Join Discord</a> to stay engaged and get immediate notifications on your phone for important
-announcements.
-
-<a
-  href="https://groups.google.com/forum/#!forum/rocky-gorge"
-  target="_blank"
-  rel="noopener noreferer"
->New Players: Join Our Mailing List</a> for team announcements, practice times, and player information.
+[New Players: FIll out our contact form](./contact) and a club leader will get in touch.
 
 <a
   href="https://groups.google.com/forum/#!forum/rocky-gorge-alumni"
