added recent scores

--- a/sections/Intro.mdx
+++ b/sections/Intro.mdx
@@ -1,5 +1,6 @@
 import Image from "next/image";
 import Link from "next/link";
+import {Scores} from '../components/Scores'
 
 ## 2023 Mid Atlantic Champions
 
@@ -14,3 +15,5 @@ We are one of the premiere rugby clubs in the Mid Atlantic. Competing in Divisio
   target="_blank"
   rel="noopener noreferer"
 >Join our alumni list</a> for social announcements, fan information, and old boy happy hours.
+
+<Scores/>
