add a donation page

--- a/pages/contacts.mdx
+++ b/pages/contacts.mdx
@@ -11,4 +11,4 @@
 * **Match Secretary** - James Park [matchsecretary@rockygorgerugby.com](mailto:matchsecretary@rockygorgerugby.com)
 
 ### Interested in joining Rocky Gorge?
-Fill out our [player interest form](./contact)
+Fill out our [player interest form](./forms/contact)
