--- a/sections/Intro.mdx
+++ b/sections/Intro.mdx
@@ -2,6 +2,8 @@ import Image from "next/image";
 import Link from "next/link";
 import {Scores} from '../components/Scores'
 
+## 2025 Division III Capital Region Champions
+
 ## 2023 Mid Atlantic Champions
 
 ## 2012 and 2014 Division II National Champions
