--- a/pages/banquet.mdx
+++ b/pages/banquet.mdx
@@ -4,14 +4,14 @@ import Champs from '../assets/champions.png'
 import BanquetTickets from '../components/BanquetTickets'
 
 export const OPTIONS = [
-  { name: `Couples - $80`, value: 80 },
+  { name: `Couple - $80`, value: 80 },
   {
     name: `Player - $50`,
     value: 50
   }
 ];
 
-<BanquetTickets defaultAmount={80} options={OPTIONS} description="Banquet Tickets">
+<PaypalProduct defaultAmount={80} options={OPTIONS} description="Banquet Tickets">
 
 ## Join us for our 2025 Rocky Gorge Banquet
 
@@ -21,4 +21,4 @@ export const OPTIONS = [
 
 More details to come
 
-</BanquetTickets>
+</PaypalProduct>
