--- a/sections/Intro.mdx
+++ b/sections/Intro.mdx
@@ -10,7 +10,7 @@ import {Scores} from '../components/Scores'
 
 We are one of the premiere rugby clubs in the Mid Atlantic. Competing in Division I and Division III men's rugby.
 
-[New Players: FIll out our contact form](./contact) and a club leader will get in touch.
+[New Players: FIll out our contact form](./forms/contact) and a club leader will get in touch.
 
 <a
   href="https://groups.google.com/forum/#!forum/rocky-gorge-alumni"
