--- a/pages/contacts.mdx
+++ b/pages/contacts.mdx
@@ -1,13 +1,13 @@
 ## Board of Directors
 * **Chairman** - Zaven Mnatzakanian [chairman@rockygorgerugby.com](mailto:chairman@rockygorgerugby.com)
 * **Vice Chairman** - Chuck Moore 
-* **Treasurer** - Derrell Kitrell [treasurer@rockygorgerugby.com](mailto:treasurer@rockygorgerugby.com)
+* **Treasurer** - Alex Wasilewski [treasurer@rockygorgerugby.com](mailto:treasurer@rockygorgerugby.com)
 * **At Large** - Matt Carroll
 * **At Large** - Nick Kuhl
 
 ## Rugby Operations
 * **President** - Will Miller [president@rockygorgerugby.com](mailto:president@rockygorgerugby.com)
-* **Head Coach** - Josh Brown
+* **Head Coach** - Ben Cima
 * **Match Secretary** - James Park [matchsecretary@rockygorgerugby.com](mailto:matchsecretary@rockygorgerugby.com)
 
 ### Interested in joining Rocky Gorge?
