--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,26 +1,90 @@
 import { Col, Row, Typography } from "antd";
 import Link from "next/link";
-import Calendar from "../components/Calendar";
-import Product from "../components/Product";
-import CardLink from "../components/CardLink";
+import Image from "next/image";
 
-import Intro from "../sections/Intro.mdx";
-import ProductLinks from "../sections/ProductLinks";
-import Links from "../sections/Links";
+import CardLink from "../components/CardLink";
+import {Scores} from '../components/Scores'
+
+import StoreItems from "../data/store.yml";
+import links from '../data/links.yml'
+import forms from '../data/forms.yml'
 
 <Row>
   <Col md={22} lg={22} style={{ textAlign: "center" }}>
-    <Intro />
+
+## 2025 Division III Capital Region Champions
+
+## 2023 Mid Atlantic Champions
+
+## 2012 and 2014 Division II National Champions
+
+We are one of the premiere rugby clubs in the Mid Atlantic. Competing in Division I and Division III men's rugby.
+
+[New Players: FIll out our contact form](./forms/contact) and a club leader will get in touch.
+
+<a
+  href="https://groups.google.com/forum/#!forum/rocky-gorge-alumni"
+  target="_blank"
+  rel="noopener noreferer"
+>Join our alumni list</a> for social announcements, fan information, and old boy happy hours.
+
+<Scores/>
+
   </Col>
 </Row>
+
 <Row gutter={20} type="flex">
   <Col md={22} lg={11}>
-    <ProductLinks />
-    <Links/>
+    <Row type="flex">
+      {StoreItems.filter(item => !item.hide).map((item) => (
+        <Col key={item.description}>
+          <CardLink
+            key={item.description}
+            title={item?.description}
+            link={`/${item.name}`}
+          >
+            <span><p>{item.info}</p>
+            {item.subscriptions != null && item.options != null && item.options.length > 0 &&
+              <p>Monthly Option Available</p>
+            }</span>
+          </CardLink>
+        </Col>
+      ))}
+    </Row>
+    <Row type="flex">
+      {links.filter(item => item.header !== true).map((item) => (
+        <Col key={item?.link}>
+          <CardLink title={item?.title} link={item?.link}>
+            {item.description}
+          </CardLink>
+        </Col>
+      ))}
+    </Row>
+    <Row type="flex">
+      {forms.filter(item => item.hide !== true).map((item) => (
+        <Col key={item?.link}>
+          <CardLink 
+            key={item?.id}
+            title={item?.name}
+            link={`forms/${item?.id}`}
+          >
+            {item.description}
+          </CardLink>
+        </Col>
+      ))}
+    </Row>
   </Col>
   <Col md={22} lg={11}>
-    <Link href="/calendar">
-      <Calendar />
-    </Link>
+    <CardLink link="/calendar" title="Calendar">
+      <iframe
+        title="Calendar"
+        src="https://calendar.google.com/calendar/embed?height=300&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&src=dDFzMGwydWNtMWZsMDg0b2xobWo2OXBtZThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%233F51B5&mode=AGENDA&title=Schedule&showTz=0&showCalendars=0&showTabs=0&showPrint=0&showNav=0&showTitle=0&showDate=0"
+        style={{ borderWidth: 0 }}
+        width="100%"
+        height="500"
+        frameBorder="0"
+        scrolling="no"
+      ></iframe>
+    </CardLink>
   </Col>
 </Row>
