--- a/sections/Intro.mdx
+++ b/sections/Intro.mdx
@@ -8,7 +8,7 @@ import {Scores} from '../components/Scores'
 
 ## 2012 and 2014 Division II National Champions
 
-We are one of the premiere rugby clubs in the Mid Atlantic. Competing in Division I and Division III men's rugby.
+We are one of the premier rugby clubs in the Mid Atlantic. Competing in Division I and Division III men's rugby.
 
 [New Players: FIll out our contact form](./forms/contact) and a club leader will get in touch.
 
