Spring 2026: Site info cleanup

--- a/pages/contacts.mdx
+++ b/pages/contacts.mdx
@@ -1,14 +1,20 @@
+# Rocky Gorge Club Contacts
 ## Board of Directors
 * **Chairman** - Zaven Mnatzakanian [chairman@rockygorgerugby.com](mailto:chairman@rockygorgerugby.com)
 * **Vice Chairman** - Chuck Moore 
 * **Treasurer** - Alex Wasilewski [treasurer@rockygorgerugby.com](mailto:treasurer@rockygorgerugby.com)
 * **At Large** - Matt Carroll
-* **At Large** - Nick Kuhl
+* **At Large** - Tracey Hall
+* **At Large** - Derrell Kittrell
+* **Coach's Representative** - Nick Capobianco
+* **Player Representative** - Adam Wiley
 
 ## Rugby Operations
 * **President** - Will Miller [president@rockygorgerugby.com](mailto:president@rockygorgerugby.com)
-* **Head Coach** - Ben Cima
+* **Head Coach** - Nick Capobianco
 * **Match Secretary** - James Park [matchsecretary@rockygorgerugby.com](mailto:matchsecretary@rockygorgerugby.com)
+* **Social Media Manager** - Alex Florenzo
+* **Field Marshal** - John Long
 
 ### Interested in joining Rocky Gorge?
 Fill out our [player interest form](./forms/contact)
