--- a/pages/banquet.mdx
+++ b/pages/banquet.mdx
@@ -13,10 +13,9 @@ export const OPTIONS = [
 
 <PaypalProduct defaultAmount={80} options={OPTIONS} description="Banquet Tickets">
 
-## Join us for our 2025 Rocky Gorge Banquet
+## Join us for our 2026 Rocky Gorge Banquet
 
-### When: July 12
-
+### When: June 10 (Tentative)
 ### Where: The Meeting House, 5885 Robert Oliver Place, Columbia , MD 21075
 
 More details to come
